[package]
name = "audio"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
base.workspace = true
x-audio.workspace = true
